Config: Disable EntityStacker debug mode by default
- Change stacker.debug from true to false
- Prevents spam of 'Entity spawn event' messages in console
- Debug can still be enabled manually if needed for troubleshooting

--- a/bin/main/config.yml
+++ b/bin/main/config.yml
@@ -26,7 +26,7 @@ stacker:
   enabled: true
 
   # Enable debug logging for stacker operations
-  debug: true
+  debug: false
 
   # Maximum stack size for different types
   max_stack_size:
