--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,9 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+    filesMatching('config.yml') {
+        expand props + [configVersion: '0.2.0']
+    }
 }
 
 tasks.register('relocatedJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
